Edited all three of the files to ensure that the tests worked... fixed the mismatch between tests and handling of mock data